--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,3 +10,9 @@ spring:
       ddl-auto: validate
       show_sql: true
       format_sql: true
+
+  management:
+    endpoints:
+      web:
+        exposure:
+          include: '*'
