Add dependencies and configuration for Spring Security and Keyclock

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -16,3 +16,9 @@ spring:
       web:
         exposure:
           include: '*'
+
+  keycloack:
+    auth-server-url: 'http://localhost:8180/auth'
+    realm: 'ToDoApp'
+    resource: 'todo-spring-client'
+    public-client: true
