--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.profiles.active=local
 
-spring.main.banner-mode=off
-task.template.allowMultipleTasks=false
-management.endpoints.web.base-path=/status
+keycloak.auth-server-url=http://localhost:8180/auth
+keycloak.realm=ToDoApp
+keycloak.resource=todo-spring-client
+keycloak.public-client=true
+
+task.template.allowMultipleTasks=true
+management.endpoints.web.exposure.include=*
+management.metrics.enable.http=false
